<resources>
    <string name="app_name">Temperature Converter</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="celsius">to Celsius</string>
    <string name="fahrenheit">to Fahrenheit</string>
    <string name="calc">Calculate</string>
    <string name="hint">Enter temperature here</string>
    <string name="invalidValue">Invalid temperature</string>
    <string name="resultTextDefault">Enter a value and press calculate.</string>

    <color name="backColor">#f4ffed</color>
    <color name="resultColor">#4e000b</color>
</resources>
