<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/backColor">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText1"
        android:maxLines="1"
        android:hint="@string/hint"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/radioGroup1">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celsius"
            android:id="@+id/celsiusButton"
            android:checked="true"
            android:textSize="@dimen/normalTextSize" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheit"
            android:id="@+id/fahrenheitButton"
            android:checked="false"
            android:textSize="@dimen/normalTextSize" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc"
        android:id="@+id/button"
        android:layout_marginTop="20dp"
        android:onClick="convertTemperature"
        android:textSize="@dimen/normalTextSize"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultTextDefault"
        android:id="@+id/resultTextView"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/resultTextSize"
        android:textColor="@color/resultColor"
        android:textStyle="bold"
        android:typeface="normal"
        android:gravity="center" />

</LinearLayout>
